--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+
+*{
+  margin:  0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
+
+  
+  color: #fff !important;
+}
+
+.navbar-light .navbar-brand {
+  color:#fff !important;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #f9fafb !important;
+  width: 102px !important;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.mt-20{
+  margin-top: 20px !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.form-control1 {
+  display: block;
+  width: 407px !important;
+ margin-left: 16px !important;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+
+@media screen and (min-device-width: 600px) and (max-device-width: 900px) { 
+  .flex{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.form-label1 {
+  margin-bottom: 0.5rem;
+  margin-left: 20px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.form-control2{
+  width: 238px;
+  display: block;
+
+ margin-left: 16px !important;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
